force-app/main/default/objects/FS_Installation__c/fields/FS_CartridgeHFCS_Rack__c.field-meta.xml
<CustomField>
    <fullName>FS_CartridgeHFCS_Rack__c</fullName>
    <label>HFCS QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>