force-app/main/default/objects/FS_Installation__c/fields/FS_CCAST_Request_Complet_DateTime_Stamp__c.field-meta.xml
<CustomField>
    <fullName>FS_CCAST_Request_Complet_DateTime_Stamp__c</fullName>
    <label>JDE EQUIP Upd Completed Date/Time Stamp</label>
    <type>DateTime</type>
</CustomField>