force-app/main/default/objects/FS_Installation__c/fields/FS_CCAST_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>FS_CCAST_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JDE EQUIP Update Submitted</label>
    <type>Checkbox</type>
</CustomField>