force-app/main/default/objects/FS_Installation__c/fields/FS_CCFS_2K_Conversion_Incentive2__c.field-meta.xml
<CustomField>
    <fullName>FS_CCFS_2K_Conversion_Incentive2__c</fullName>
    <formula>IF( TEXT(FS_Execution_Plan__r.FS_Headquarters__r.FS_CCFS_2K_Conversion_Incentive__c) &lt;&gt;&quot;&quot;, TEXT(FS_Execution_Plan__r.FS_Headquarters__r.FS_CCFS_2K_Conversion_Incentive__c),TEXT(FS_Execution_Plan__r.FS_Chain_Name__r.FS_CCFS_2K_Conversion_Incentive__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCFS $2K Conversion Incentive</label>
    <type>Text</type>
</CustomField>