force-app/main/default/objects/FS_Installation__c/fields/FS_Change_Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Change_Onboarding_Date__c</fullName>
    <label>Reschedule Onboarding Date</label>
    <type>Date</type>
</CustomField>