force-app/main/default/objects/FS_Installation__c/fields/FS_CIF__c.field-meta.xml
<CustomField>
    <fullName>FS_CIF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CIF</label>
    <referenceTo>FS_CIF__c</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>