force-app/main/default/objects/FS_Installation__c/fields/FS_CIF_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_CIF_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; +  FS_CIF__r.CIF_Head__c , FS_CIF__r.CIF_Head__r.Name,&quot;_self&quot;)</formula>
    <label>CIF Name</label>
    <type>Text</type>
</CustomField>