force-app/main/default/objects/FS_Installation__c/fields/FS_Closeout_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Closeout_Notes_Comments__c</fullName>
    <label>Closeout Notes/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>