force-app/main/default/objects/FS_Installation__c/fields/FS_Closeout_Notes_CommentsTimestamp__c.field-meta.xml
<CustomField>
    <fullName>FS_Closeout_Notes_CommentsTimestamp__c</fullName>
    <label>Add new Closeout Notes/Comments</label>
    <length>32678</length>
    <type>LongTextArea</type>
</CustomField>