force-app/main/default/objects/FS_Installation__c/fields/FS_COM_Regular__c.field-meta.xml
<CustomField>
    <fullName>FS_COM_Regular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations9</relationshipName>
    <type>Lookup</type>
</CustomField>