force-app/main/default/objects/FS_Installation__c/fields/FS_Completion_by_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Completion_by_Date__c</fullName>
    <label>Completion by Date</label>
    <type>Date</type>
</CustomField>