force-app/main/default/objects/FS_Installation__c/fields/FS_Confirm_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Confirm_Install_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore brandset commercial approval date</label>
    <type>Checkbox</type>
</CustomField>