force-app/main/default/objects/FS_Installation__c/fields/FS_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>