force-app/main/default/objects/FS_Installation__c/fields/FS_Coordination_To_Be_Done_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Coordination_To_Be_Done_By__c</fullName>
    <label>Coordination To Be Done By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>