force-app/main/default/objects/FS_Installation__c/fields/FS_CS_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Payment_Method__c</fullName>
    <label>8000 Series - Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Bank Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>