force-app/main/default/objects/FS_Installation__c/fields/FS_Cup_Name_2__c.field-meta.xml
<CustomField>
    <fullName>FS_Cup_Name_2__c</fullName>
    <label>Cup Name 2</label>
    <length>16</length>
    <type>Text</type>
</CustomField>