force-app/main/default/objects/FS_Installation__c/fields/FS_Customer_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Confirmation</label>
    <type>Checkbox</type>
</CustomField>