force-app/main/default/objects/FS_Installation__c/fields/FS_Customer_disposition_Provide_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_disposition_Provide_DateTime__c</fullName>
    <label>Customer disposition Provided Date/Time</label>
    <type>DateTime</type>
</CustomField>