force-app/main/default/objects/FS_Installation__c/fields/FS_Customer_Readiness_Days__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Readiness_Days__c</fullName>
    <formula>IF( FS_Scheduled_Install_Date__c - today() &gt;  0, FS_Scheduled_Install_Date__c - today(), 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Readiness (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>