force-app/main/default/objects/FS_Installation__c/fields/FS_Customer_s_disposition_after_review__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_s_disposition_after_review__c</fullName>
    <description>Customerâ€™s disposition after review</description>
    <inlineHelpText>Customerâ€™s disposition after review  value gettting copied from CIF</inlineHelpText>
    <label>Customerâ€™s disposition after review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Site Survey</fullName>
            </value>
            <value>
                <fullName>Approved by Customer</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Reviewed Awaiting Customer Decision</fullName>
                <isActive>false</isActive>
                <label>Reviewed Awaiting Customer Decision</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>