force-app/main/default/objects/FS_Installation__c/fields/FS_Customer_s_disposition_captured_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_s_disposition_captured_by__c</fullName>
    <label>Customer&#39;s disposition captured by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>