force-app/main/default/objects/FS_Installation__c/fields/FS_Customer_Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Support_Notes__c</fullName>
    <label>Customer Support Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>