force-app/main/default/objects/FS_Installation__c/fields/FS_CustomerRegisteredWithCokeSmart_CPO__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomerRegisteredWithCokeSmart_CPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Registered with CokeSmart (CPO)</label>
    <type>Checkbox</type>
</CustomField>