force-app/main/default/objects/FS_Installation__c/fields/FS_Date_GFE_Posted__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_GFE_Posted__c</fullName>
    <label>Date GFE Posted</label>
    <type>Date</type>
</CustomField>