force-app/main/default/objects/FS_Installation__c/fields/FS_Date_when_it_is_4_install_Sheduled__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_when_it_is_4_install_Sheduled__c</fullName>
    <label>Date when it is 4 install Scheduled</label>
    <type>Date</type>
</CustomField>