force-app/main/default/objects/FS_Installation__c/fields/FS_Davaco_Order_Entered_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_Order_Entered_By__c</fullName>
    <label>Order Entered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>