force-app/main/default/objects/FS_Installation__c/fields/FS_Davaco_Order_Entered_Date_Time_2nd_Su__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_Order_Entered_Date_Time_2nd_Su__c</fullName>
    <label>Order Entered Date/Time Second Survey</label>
    <type>DateTime</type>
</CustomField>