force-app/main/default/objects/FS_Installation__c/fields/FS_Davaco_Order_Entered_Second_Survey__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_Order_Entered_Second_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Entered Second Survey</label>
    <type>Checkbox</type>
</CustomField>