force-app/main/default/objects/FS_Installation__c/fields/FS_Davaco_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_Requirements__c</fullName>
    <label>What type of Site Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Construction SA - Proceed w/Scheduling</fullName>
            </value>
            <value>
                <fullName>SA Not Required - OSM approval required for local market</fullName>
            </value>
            <value>
                <fullName>Site Assess + GFE bid proposal (traditional)</fullName>
            </value>
            <value>
                <fullName>Site Assessment Only (survey only)</fullName>
            </value>
            <value>
                <fullName>Rush â€“ New Construction SA â€“ Proceed w/Scheduling</fullName>
            </value>
            <value>
                <fullName>Rush - Site Assess + GFE Bid proposal (traditional)</fullName>
            </value>
            <value>
                <fullName>Rush - Site Assessment Only (Survey Only)</fullName>
            </value>
            <value>
                <fullName>No Site Assessment-Required</fullName>
            </value>
            <value>
                <fullName>SA Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>