force-app/main/default/objects/FS_Installation__c/fields/FS_Davaco_SA_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_SA_Status__c</fullName>
    <formula>(If( ISPICKVAL( FS_Davaco_Requirements__c, &quot;SA Not Required - OSM approval required for local market&quot;) ,&quot;Complete&quot;, 
(If( ISPICKVAL( FS_Davaco_Requirements__c , &quot;New Construction SA - Proceed w/Scheduling&quot;) ,&quot;Complete&quot;, 
(If( FS_Execution_Plan__r.FS_Bypass_functions_Company_Locations__c,&quot;Complete&quot;, 

(If( AND(TEXT( FS_SA_Scheduled_On_Date__c )=&quot;&quot; , 
TEXT( FS_SA_Completed_Date__c )=&quot;&quot;),&quot;**Pending&quot;, 

(If( AND(TEXT(FS_SA_Scheduled_On_Date__c)&lt;&gt;&quot;&quot; , 
TEXT(FS_SA_Completed_Date__c)=&quot;&quot;),&quot;*Scheduled&quot;, 

(If( AND(TEXT(FS_SA_Scheduled_On_Date__c)&lt;&gt;&quot;&quot; , 
TEXT(FS_SA_Completed_Date__c)&lt;&gt;&quot;&quot;),&quot;Complete&quot;,&quot;**Pending&quot;))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Status</label>
    <type>Text</type>
</CustomField>