force-app/main/default/objects/FS_Installation__c/fields/FS_DavacoOrderEnteredDateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_DavacoOrderEnteredDateTime__c</fullName>
    <label>Order Entered Date/Time</label>
    <type>DateTime</type>
</CustomField>