force-app/main/default/objects/FS_Installation__c/fields/FS_Day_AM_or_Night_PM_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Day_AM_or_Night_PM_Installation__c</fullName>
    <label>Day or Night Install</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day Ã¢â‚¬â€œ typically 8am start time</fullName>
            </value>
            <value>
                <fullName>Night Ã¢â‚¬â€œ typically 10pm start time</fullName>
            </value>
            <value>
                <fullName>Early AM Ã¢â‚¬â€œ typically 5am or 6am start time</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
                <isActive>false</isActive>
                <label>Day</label>
            </value>
            <value>
                <fullName>Early_AM</fullName>
                <isActive>false</isActive>
                <label>Early_AM</label>
            </value>
            <value>
                <fullName>Night</fullName>
                <isActive>false</isActive>
                <label>Night</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>