force-app/main/default/objects/FS_Installation__c/fields/FS_Describe_Any_Known_Construction_Needs__c.field-meta.xml
<CustomField>
    <fullName>FS_Describe_Any_Known_Construction_Needs__c</fullName>
    <label>Describe Any Known Construction Needs?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>