force-app/main/default/objects/FS_Installation__c/fields/FS_Did_BAST_initiate_this_RO4W__c.field-meta.xml
<CustomField>
    <fullName>FS_Did_BAST_initiate_this_RO4W__c</fullName>
    <label>Did BAST initiate this RO4W?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>