force-app/main/default/objects/FS_Installation__c/fields/FS_Disconnect_Final_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Disconnect_Final_Date__c</fullName>
    <label>Disconnect Final Date</label>
    <type>Date</type>
</CustomField>