force-app/main/default/objects/FS_Installation__c/fields/FS_Dispenser_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_QTY__c</fullName>
    <label>Dispenser QTY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>