force-app/main/default/objects/FS_Installation__c/fields/FS_Dispensers_IC_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispensers_IC_Code_Description__c</fullName>
    <label>Dispensers (IC Code &amp; Description)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45737-Variety Tea Tower</fullName>
            </value>
            <value>
                <fullName>45886-Space Saver VTT</fullName>
            </value>
            <value>
                <fullName>42117R-8 vlv Drop-in</fullName>
            </value>
            <value>
                <fullName>45847R-Bevariety dispenser 23x23 &quot;12-pack w/ MVU</fullName>
            </value>
            <value>
                <fullName>46265-Mark IV -BG 10BTN/-8-62036 (10 Button, 6 Carb, 2 Non-Carb, Red, Flow Regulated, 3 Feet)</fullName>
            </value>
            <value>
                <fullName>45999-BUNN TB3 Tea Brewer</fullName>
            </value>
            <value>
                <fullName>45930-BUNN TDO-N-3.5 TEA URN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>