force-app/main/default/objects/FS_Installation__c/fields/FS_DispOrder3__c.field-meta.xml
<CustomField>
    <fullName>FS_DispOrder3__c</fullName>
    <inlineHelpText>This reflects the quantity of dispensers specified on the related Equipment Package</inlineHelpText>
    <label>Dispensers QTY 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>