force-app/main/default/objects/FS_Installation__c/fields/FS_Disposition_of_Dispenser_Upon_Removal__c.field-meta.xml
<CustomField>
    <fullName>FS_Disposition_of_Dispenser_Upon_Removal__c</fullName>
    <description>Disposition of Dispenser Upon Removal</description>
    <label>Disposition of Dispenser Upon Removal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Removed and Taken to SP for Storage</fullName>
            </value>
            <value>
                <fullName>Disconnected and Placed in Backroom</fullName>
            </value>
            <value>
                <fullName>Removed and Shipped to New Outlet</fullName>
            </value>
            <value>
                <fullName>Dispenser Back at Location and Reconnected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>