force-app/main/default/objects/FS_Installation__c/fields/FS_DispRequested3__c.field-meta.xml
<CustomField>
    <fullName>FS_DispRequested3__c</fullName>
    <inlineHelpText>This reflects the quantity of dispensers originally requested at CIF level</inlineHelpText>
    <label># of Dispenser 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>