force-app/main/default/objects/FS_Installation__c/fields/FS_Distributor_Foodservice_Desc__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Foodservice_Desc__c</fullName>
    <label>Distributor Foodservice Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>