force-app/main/default/objects/FS_Installation__c/fields/FS_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Name__c</fullName>
    <formula>FS_Outlet__r.FS_Distributor__r.Name</formula>
    <label>Distributor Name</label>
    <type>Text</type>
</CustomField>