force-app/main/default/objects/FS_Installation__c/fields/FS_Doc__c.field-meta.xml
<CustomField>
    <fullName>FS_Doc__c</fullName>
    <label>Sales Order #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>