force-app/main/default/objects/FS_Installation__c/fields/FS_Document_Shipped__c.field-meta.xml
<CustomField>
    <fullName>FS_Document_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Shipped</label>
    <type>Checkbox</type>
</CustomField>