force-app/main/default/objects/FS_Installation__c/fields/FS_Does_Self_Serve_IM_Dispense_Soft_Ice__c.field-meta.xml
<CustomField>
    <fullName>FS_Does_Self_Serve_IM_Dispense_Soft_Ice__c</fullName>
    <label>Does 9000 Series IM Dispense Soft Ice?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>