force-app/main/default/objects/FS_Installation__c/fields/FS_Dry_Install__c.field-meta.xml
<CustomField>
    <fullName>FS_Dry_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dry Install</description>
    <inlineHelpText>Please ensure the On-Boarding date is equal or greater than the Fire Up date
(This may not apply to a PIA replacement form )</inlineHelpText>
    <label>Dry Install</label>
    <type>Checkbox</type>
</CustomField>