force-app/main/default/objects/FS_Installation__c/fields/FS_DryAccount_curently_no_dispnsd_accnt__c.field-meta.xml
<CustomField>
    <fullName>FS_DryAccount_curently_no_dispnsd_accnt__c</fullName>
    <label>DryAccount curently no dispensed account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>