force-app/main/default/objects/FS_Installation__c/fields/Fs_Elapse_Days__c.field-meta.xml
<CustomField>
    <fullName>Fs_Elapse_Days__c</fullName>
    <inlineHelpText>This represents the difference between the &quot;Initially scheduled Updated Date&quot; stamp and the &quot;Scheduled Date&quot; provided</inlineHelpText>
    <label>Rush Elapsed Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>