force-app/main/default/objects/FS_Installation__c/fields/FS_Entering_COM__c.field-meta.xml
<CustomField>
    <fullName>FS_Entering_COM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FS_Entering_COM</description>
    <label>COM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations3</relationshipName>
    <type>Lookup</type>
</CustomField>