force-app/main/default/objects/FS_Installation__c/fields/FS_EP_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_EP_Name__c</fullName>
    <formula>FS_Execution_Plan__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EP Name</label>
    <type>Text</type>
</CustomField>