force-app/main/default/objects/FS_Installation__c/fields/FS_EPFAD__c.field-meta.xml
<CustomField>
    <fullName>FS_EPFAD__c</fullName>
    <formula>FS_Execution_Plan__r.FS_ExecutionPlan_Final_Approval_DateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EP Final Approval Date</label>
    <type>Date</type>
</CustomField>