force-app/main/default/objects/FS_Installation__c/fields/FS_Eq_Base_Qty__c.field-meta.xml
<CustomField>
    <fullName>FS_Eq_Base_Qty__c</fullName>
    <label>Eq-Base QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>