force-app/main/default/objects/FS_Installation__c/fields/FS_Eq_CS_IM_Soft_Ice_Model__c.field-meta.xml
<CustomField>
    <fullName>FS_Eq_CS_IM_Soft_Ice_Model__c</fullName>
    <label>IM Model (8000 Series)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>